# uac_app

./: Makefile
uac_app/: CMakeLists.txt
uac_app/configs/: configs_skv.json
uac_app/src/: main.cpp  uac_control.cpp  uevent.cpp
uac_app/src/filter/: uac_alg_parameters.h
uac_app/src/graph/: graph_control.cpp  graph_control.h  uac_control_graph.cpp
uac_app/src/include/: uac_common_def.h  uac_control.h  uac_control_graph.h  uac_control_mpi.h  uac_log.h
uac_app/src/mpi/: mpi_control.cpp  mpi_control.h  uac_control_mpi.cpp
uac_app/src/mpi_common/: mpi_control_common.cpp
